Added Email DAL, BLL, and implimented Save on UI

--- a/AstonTech.AstonEngineer.BLL/AstonTech.AstonEngineer.BLL.csproj
+++ b/AstonTech.AstonEngineer.BLL/AstonTech.AstonEngineer.BLL.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmailAddressManager.cs" />
     <Compile Include="EmployeeManager.cs" />
     <Compile Include="EntityTypeManager.cs" />
     <Compile Include="PersonManager.cs" />
